[package]
name = "include-tracker"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
license-file = "LICENSE"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
ptree = "0.4.0"
